@@ -1,3 +1,7 @@
-2006-07-01 18:00  Thomas
+2006-08-10 20:15  Thomas Schreck <shrek@xfce.org>
+
+	* added autogen.sh
+
+2006-07-01 18:00  Thomas Schreck <shrek@xfce.org>
 
 	* initial version
